update styling on headers to make it more compact

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -274,6 +274,7 @@ table {
   background-color: var(--BLACK);
   font-weight: bold;
   text-transform: uppercase;
+  white-space: pre-line;
 }
 
 .row {
