--- a/templates/fields/salina_gambit_A.html
+++ b/templates/fields/salina_gambit_A.html
@@ -20,8 +20,7 @@
    version="1.1"
    id="svg8"
    inkscape:version="0.92.5 (2060ec1f9f, 2020-04-08)"
-   sodipodi:docname="salina_gambit_A.svg"
-   style="background-image: url('../img/fields/salina_gambit_A.png')">
+   sodipodi:docname="salina_gambit_A.svg">
   <defs
      id="defs2" />
   <sodipodi:namedview
