--- a/templates/fields/ballahack.html
+++ b/templates/fields/ballahack.html
@@ -1,4 +1,4 @@
-{% extends ("field_wrapper.html" if not field else "node_admin.html") %}
+{% extends ("node_admin.html" if admin else "field_wrapper.html") %}
 
 {% block SVG %}
 
