--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -126,7 +126,8 @@
 
         {% for node in node_status %}
 
-        <div id="{{node.node | safe}}" class="node_block" draggable="true" ondragstart="drag(event)">
+        <div id="{{node.node | safe}}" class="node_block" >
+          <img id="{{node.node | safe}}_img", src="static/img/node.gif", draggable="true", ondragstart="drag(event)", width="50px",height="50px">
           <p>{{ node.node }}</p>
         </div>
 
@@ -149,6 +150,7 @@
 
 
   </div>
+
 
 
 
