--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+<defs>
+  <pattern id="img1" patternUnits="userSpaceOnUse" width="100" height="100">
+    <image href="static/img/node.jpg" x="0" y="0" width="100" height="100" />
+  </pattern>
+</defs> 
+
 <body onload="update_cmd_args({{ cmd_args | safe }})">
 
     <ul class="tab" id="main-nav">
@@ -127,7 +133,9 @@
         {% for node in node_status %}
 
         <div id="{{node.node | safe}}" class="node_block" >
-          <img id="{{node.node | safe}}_img", src="static/img/node.gif", draggable="true", ondragstart="drag(event)", width="50px",height="50px">
+          <div id="{{node.node | safe}}_img" class="node_img_div"  draggable="true" width="70px" height="70px">
+            <img src="static/img/node.jpg", draggable="false" width="50px" height="50px">
+          </div>
           <p>{{ node.node }}</p>
         </div>
 
