--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -2,20 +2,18 @@
 
 {% block content %}
 
-<defs>
-  <pattern id="img1" patternUnits="userSpaceOnUse" width="100" height="100">
-    <image href="static/img/node.jpg" x="0" y="0" width="100" height="100" />
-  </pattern>
-</defs> 
+<!-- <script src="../static/js/node_admin.js"></script> -->
+
+
 
 <body onload="update_cmd_args({{ cmd_args | safe }})">
 
-    <ul class="tab" id="main-nav">
+    <!-- <ul class="tab" id="main-nav">
       <li onclick="show_table(event, 'game_admin')" id="defaultOpen"><a class="tablink">Game Admin</a></li>
       <li onclick="show_table(event, 'node_table')"><a class="tablink">Node Table</a></li>
-    </ul>
+    </ul> -->
 
-  <div id="game_admin" class="node_admin">
+  <!-- <div id="game_admin" class="node_admin"> -->
 
     <form id="configuration_control"
           name="Member_Data"
@@ -128,7 +126,7 @@
     </form>
 
 
-      <div class="node_container">
+      <!-- <div class="node_container">
 
         {% for node in node_status %}
 
@@ -145,6 +143,12 @@
 
       <div class="beacon-container node">
 
+          <defs>
+            <pattern id="img1" patternUnits="userSpaceOnUse" width="100" height="100">
+              <image href="static/img/node.jpg" x="0" y="0" width="100" height="100" />
+            </pattern>
+          </defs>
+
         {% block SVG %}
         {% endblock %}
 
@@ -154,15 +158,15 @@
 
         <p> Place Holder </p>
 
-      </div>
+      </div> -->
 
 
-  </div>
+  <!-- </div> -->
 
 
 
 
-  <div id="node_table" class="node_admin" style="display:'none'">
+  <!-- <div id="node_table" class="node_admin" style="display:'none'"> -->
 
     {% if cmd_dict %}
 
@@ -202,10 +206,11 @@
 
     {% endif %}
 
-  </div>
+  <!-- </div> -->
 
 </body>
 
-<script src="../static/js/node_admin.js"></script>
+
+<!-- <script> document.getElementById("defaultOpen").click(); </script> -->
 
 {% endblock %}
