swap font color

--- a/templates/node_admin.html
+++ b/templates/node_admin.html
@@ -185,7 +185,7 @@
             <tbody>
 
                 {% for node in node_status %}
-                <tr class="row" style="color:#808080;">
+                <tr class="row">
 
                     <td> {{ node.node                              | safe }} </td>
                     <td> {{ node.location                          | safe }} </td>
