--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
 <head>
 
-  <title> IRL Systems - Battlefield </title>
+  <title> SkirMesh - Battlefield </title>
   <meta charset="UTF-8">
   <meta name={{ author }}
         content="Results earned here.">
