--- a/static/css/main.css
+++ b/static/css/main.css
@@ -591,3 +591,42 @@ dd, dt {
     padding: .1em;
 
 }
+
+/*--------- Player Profile Settings ----------*/
+
+.callsignHeader {
+    border-style : solid;
+    width : 100%;
+    height : 20%;
+    border-width : 4px;
+    padding : 0;
+    margin  : 0;
+    text-align : left;
+}
+
+.callsignHeader p {
+    font-size : 4em;
+    width : 100%;
+    height : 20%;
+    padding : 0;
+    margin  : 0;
+}
+
+.playerImage {
+    display : inline-block;
+    height : 40%;
+    width 40%;
+    border-style : solid;
+    border-width : 4px;
+
+}
+
+.playerInfo {
+    display : inline-block;
+    border-style : solid;
+    border-width : 4px;
+    height  : 40%;
+    width   : 50%;
+}
+
+/* ------------------------------------------ */
