--- a/static/css/main.css
+++ b/static/css/main.css
@@ -594,13 +594,16 @@ dd, dt {
 
 /*--------- Player Profile Settings ----------*/
 
+.playerPage {
+    margin  : 0;
+    padding : 0;
+
+}
 .callsignHeader {
     border-style : solid;
-    width : 100%;
+    width : 99%;
     height : 20%;
     border-width : 4px;
-    padding : 0;
-    margin  : 0;
     text-align : left;
 }
 
@@ -615,10 +618,17 @@ dd, dt {
 .playerImage {
     display : inline-block;
     height : 40%;
-    width 40%;
+    width  : 48%;
     border-style : solid;
     border-width : 4px;
+    text-align : left;
 
+}
+
+.playerImage img {
+    max-height : 100%;
+    max-width  : 100%;
+    text-align : left;
 }
 
 .playerInfo {
@@ -627,6 +637,11 @@ dd, dt {
     border-width : 4px;
     height  : 40%;
     width   : 50%;
+    text-align : left;
+    vertical-align : top;
 }
 
+.playerInfo p {
+    padding : 1em;
+}
 /* ------------------------------------------ */
