--- a/templates/player_profile.html
+++ b/templates/player_profile.html
@@ -8,29 +8,40 @@
   <h1> Hello, {{ user.lastname }} </h1>
   <h1> Hello, {{ user.email }} </h1>
   <h1> Hello, {{ user.callsign }} </h1>
--->  
+-->
+
+<link rel="stylesheet" type="text/css" href="../static/css/player_profile.css" charset="utf-8" />
+
   <div class="playerPage">
 
   <div class="callsignHeader">
-    <p> Callsign </p>
+    <p> {{ user.outfit or "[You need a squad] " }}: {{ user.callsign }}</p>
 
   </div>
 
   <div class="playerImage">
     <img src="../static/img/soldierC.jpg" alt="bad ass dude" >
-
   </div>
 
   <div class="playerInfo">
 
-    <p> First Name: </p>
-    <p> Player First Name </p>
-    <p> Last Name: </p>
-    <p> Player Last Name </p>
-    <p> Outfit: </p>
-    <p> Player Outfit </p>
+    <p> {{ user.lastname }}, {{ user.firstname }} </p>
+    <p> Career highlights: </p>
 
-  </div>
+
+    {% set cap = user.captures or 10 %}
+    {% set ass = user.assists or 5 %}
+    {% set pts = (cap * 2) + ass %}
+
+    {% set rad = 50 %}
+    {% set circ = rad * 2 * 3.14159 %}
+
+    {% set perc_cap = cap*2/pts %}
+    {% set perc_ass = ass/pts %}
+    {% set perc_pts = pts / 1 %}
+
+    {% set stroke_w = rad / 4 %}
+
 
   <div class="playerStats">
 
@@ -46,10 +57,38 @@
 
       <tbody>
 
-        <tr class="row">
-          <td>15</td>
-          <td>30</td>
-          <td>100</td>
+        <tr>
+
+          <td>
+              <svg width="100%">
+                <circle class="progress"
+                        cx="50%" cy="50%" r="{{ rad }}"
+                        perc="{{ circ - circ * perc_cap }}"
+                        style="fill:none; stroke: #808080; stroke-width: {{ stroke_w }};" />
+                <text x="50%" y="52.5%" text-anchor="middle">{{ cap }}</text>
+              </svg>
+          </td>
+
+          <td>
+              <svg width="100%">
+                <circle class="progress"
+                        cx="50%" cy="50%" r="{{ rad }}"
+                        perc="{{ circ - circ * perc_ass }}"
+                        style="fill:none; stroke: #808080; stroke-width: {{ stroke_w }};" />
+                <text x="50%" y="52.5%" text-anchor="middle">{{ ass }}</text>
+              </svg>
+          </td>
+
+          <td>
+              <svg width="100%" >
+                <circle class="progress"
+                        cx="50%" cy="50%" r="{{ rad }}"
+                        perc="{{ circ }}"
+                        style="fill:none; stroke:#808080; stroke-width: {{ stroke_w }};" />
+                <text x="50%" y="52.5%" text-anchor="middle">{{ pts }}</text>
+              </svg>
+          </td>
+
         </tr>
 
       </tbody>
@@ -59,4 +98,26 @@
   </div>
 
   </div>
+
+
+  <script>
+
+  var circles = document.querySelectorAll('circle');
+
+  for (i = 0; i < circles.length; i++) {
+
+      var circle = circles[i];
+
+      var radius = circle.r.baseVal.value;
+      var perc   = circle.getAttribute('perc');
+
+      var circumference = radius * 2 * Math.PI;
+
+      circle.style.strokeDasharray = `${circumference} ${circumference}`;
+      circle.style.strokeDashoffset = `${perc}`;
+
+  }
+  </script>
+
+
 {% endblock %}
