--- a/templates/player_profile.html
+++ b/templates/player_profile.html
@@ -23,11 +23,11 @@
 
   <div class="playerInfo">
 
-    <p> First Name: </p>
+    <h1> First Name: </h1>
     <p> Player First Name </p>
-    <p> Last Name: </p>
+    <h1> Last Name: </h1>
     <p> Player Last Name </p>
-    <p> Outfit: </p>
+    <h1> Outfit: </h1>
     <p> Player Outfit </p>
 
   </div>
