--- a/templates/player_profile.html
+++ b/templates/player_profile.html
@@ -40,7 +40,7 @@
     {% set perc_ass = ass/pts %}
     {% set perc_pts = pts / 1 %}
 
-    {% set stroke_w = rad / 4 %}
+    {% set stroke_w = rad / 6 %}
 
 
   <div class="playerStats">
@@ -61,30 +61,42 @@
 
           <td>
               <svg width="100%">
-                <circle class="progress"
-                        cx="50%" cy="50%" r="{{ rad }}"
-                        perc="{{ circ - circ * perc_cap }}"
-                        style="fill:none; stroke: #808080; stroke-width: {{ stroke_w }};" />
+                <circle class="capture" cx="50%" cy="50%" r="{{ rad }}">
+                    <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                    <set attributeName='stroke' from="#808080" to="#C0C0C0" begin="mouseover" end="mouseout"/>
+                    <set attributeName='stroke-dashoffset' to="{{ -(circ - circ * perc_cap) }}"/>
+                    <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                </circle>
                 <text x="50%" y="52.5%" text-anchor="middle">{{ cap }}</text>
               </svg>
           </td>
 
           <td>
               <svg width="100%">
-                <circle class="progress"
-                        cx="50%" cy="50%" r="{{ rad }}"
-                        perc="{{ circ - circ * perc_ass }}"
-                        style="fill:none; stroke: #808080; stroke-width: {{ stroke_w }};" />
+                <circle class="assist" cx="50%" cy="50%" r="{{ rad }}">
+                    <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                    <set attributeName='stroke' from="#800000" to="#F0C0C0" begin="mouseover" end="mouseout"/>
+                    <set attributeName='stroke-dashoffset' to="{{ circ - circ * perc_ass }}"/>
+                    <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                </circle>
                 <text x="50%" y="52.5%" text-anchor="middle">{{ ass }}</text>
               </svg>
           </td>
 
           <td>
               <svg width="100%" >
-                <circle class="progress"
-                        cx="50%" cy="50%" r="{{ rad }}"
-                        perc="{{ circ }}"
-                        style="fill:none; stroke:#808080; stroke-width: {{ stroke_w }};" />
+                <circle class="capture" cx="50%" cy="50%" r="{{ rad }}">
+                    <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                    <set attributeName='stroke' from="#808080" to="#C0C0C0" begin="mouseover" end="mouseout"/>
+                    <set attributeName='stroke-dashoffset' to="{{ -(circ - circ * perc_cap) }}"/>
+                    <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                </circle>
+                <circle class="assist" cx="50%" cy="50%" r="{{ rad }}">
+                    <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                    <set attributeName='stroke' from="#800000" to="#F0C0C0" begin="mouseover" end="mouseout"/>
+                    <set attributeName='stroke-dashoffset' to="{{ circ - circ * perc_ass }}"/>
+                    <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                </circle>
                 <text x="50%" y="52.5%" text-anchor="middle">{{ pts }}</text>
               </svg>
           </td>
@@ -100,24 +112,6 @@
   </div>
 
 
-  <script>
-
-  var circles = document.querySelectorAll('circle');
-
-  for (i = 0; i < circles.length; i++) {
-
-      var circle = circles[i];
-
-      var radius = circle.r.baseVal.value;
-      var perc   = circle.getAttribute('perc');
-
-      var circumference = radius * 2 * Math.PI;
-
-      circle.style.strokeDasharray = `${circumference} ${circumference}`;
-      circle.style.strokeDashoffset = `${perc}`;
-
-  }
-  </script>
 
 
 {% endblock %}
