--- a/static/css/player_profile.css
+++ b/static/css/player_profile.css
@@ -1,4 +1,8 @@
 
+.container1 {
+    display : flex;
+    flex-direction: row;
+}
 
 .playerPage {
     margin  : 0;
@@ -22,10 +26,8 @@
 }
 
 .playerImage {
-    display    : inline-block;
-    width      : 50%;
-    text-align : left;
-    padding    : 1em 0;
+    margin    : 1em 0;
+    flex      : 1;
 }
 
 .playerImage img {
@@ -37,18 +39,21 @@
 .playerInfo {
     border-style   : solid;
     border-width   : 4px;
-    width          : 80%;
+    flex           : 2;
     text-align     : left;
     vertical-align : top;
     font-size      : 120%;
     text-transform : capitalize;
+    margin         : 1em 0;
 }
 
 .playerInfo p {
     padding : 1em;
 }
 
+.playerStats {
 
+}
 
 .career {
     padding: 2em;
