--- a/templates/player_profile.html
+++ b/templates/player_profile.html
@@ -18,7 +18,7 @@
       <p> {{ user.outfit or "[You need a squad] " }}: {{ user.callsign }}</p>
 
     </div>
-  
+
     <div class="container1">
       <div class="playerImage">
         <img src="../static/img/soldierC.jpg" alt="bad ass dude" >
@@ -45,7 +45,7 @@
         <div class="playerStats">
 
           <table id="table">
-  
+
             <thead>
               <tr>
                 <th class="header">Captures</td>
@@ -53,53 +53,65 @@
                 <th class="header">Total Points</td>
               </tr>
             </thead>
-  
+
             <tbody>
-  
+
               <tr>
-  
+
                 <td>
                     <svg width="100%">
-                      <circle class="progress"
-                              cx="50%" cy="50%" r="{{ rad }}"
-                              perc="{{ circ - circ * perc_cap }}"
-                              style="fill:none; stroke: #808080; stroke-width: {{ stroke_w }};" />
+                      <circle class="capture" cx="50%" cy="50%" r="{{ rad }}">
+                          <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                          <set attributeName='stroke' from="#808080" to="#C0C0C0" begin="mouseover" end="mouseout"/>
+                          <set attributeName='stroke-dashoffset' to="{{ -(circ - circ * perc_cap) }}"/>
+                          <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                      </circle>
                       <text x="50%" y="52.5%" text-anchor="middle">{{ cap }}</text>
                     </svg>
                 </td>
-  
+
                 <td>
                     <svg width="100%">
-                      <circle class="progress"
-                              cx="50%" cy="50%" r="{{ rad }}"
-                              perc="{{ circ - circ * perc_ass }}"
-                              style="fill:none; stroke: #808080; stroke-width: {{ stroke_w }};" />
+                      <circle class="assist" cx="50%" cy="50%" r="{{ rad }}">
+                          <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                          <set attributeName='stroke' from="#800000" to="#F0C0C0" begin="mouseover" end="mouseout"/>
+                          <set attributeName='stroke-dashoffset' to="{{ circ - circ * perc_ass }}"/>
+                          <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                      </circle>
                       <text x="50%" y="52.5%" text-anchor="middle">{{ ass }}</text>
                     </svg>
                 </td>
-  
+
                 <td>
                     <svg width="100%" >
-                      <circle class="progress"
-                              cx="50%" cy="50%" r="{{ rad }}"
-                              perc="{{ circ }}"
-                              style="fill:none; stroke:#808080; stroke-width: {{ stroke_w }};" />
+                      <circle class="capture" cx="50%" cy="50%" r="{{ rad }}">
+                          <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                          <set attributeName='stroke' from="#808080" to="#C0C0C0" begin="mouseover" end="mouseout"/>
+                          <set attributeName='stroke-dashoffset' to="{{ -(circ - circ * perc_cap) }}"/>
+                          <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                      </circle>
+                      <circle class="assist" cx="50%" cy="50%" r="{{ rad }}">
+                          <set attributeName='stroke-width' to="{{ stroke_w }}"/>
+                          <set attributeName='stroke' from="#800000" to="#F0C0C0" begin="mouseover" end="mouseout"/>
+                          <set attributeName='stroke-dashoffset' to="{{ circ - circ * perc_ass }}"/>
+                          <set attributeName='stroke-dasharray' to="{{ circ }} {{ circ }}"/>
+                      </circle>
                       <text x="50%" y="52.5%" text-anchor="middle">{{ pts }}</text>
                     </svg>
                 </td>
-  
+
               </tr>
-  
+
             </tbody>
-  
+
           </table>
-  
+
         </div>
-        
+
       </div>
-         
+
     </div>
-     
+
   </div>
 
 
