--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         {% if field %}
         <li><a href="/index/{{ field }}">Field Map</a></li>
         {% endif %}
-        <li><a href="/players">Leaderboard</a></li>
+        <li><a href="/leaderboard">Leaderboard</a></li>
         <!-- <li><a href="/user_reg">Pair UID</a></li> -->
         <li><a href="/node_admin">Node Admin</a></li>
         <li><a href="/comms">Comms Log</a></li>
